--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,9 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "test": "jest",
+        "start": "node ./src/server.js",
+        "dev": "nodemon ./src/server.js"
     },
     "author": "Emeric Francisod",
     "license": "MIT",
