--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
         "@types/jest": "^29.2.1",
         "babel-jest": "^29.2.2",
         "babel-plugin-transform-import-meta": "^2.2.0",
+        "eslint": "^8.26.0",
         "jest": "^29.2.2",
         "nodemon": "^2.0.20"
     },
