--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
     "type": "module",
     "scripts": {
         "test": "jest",
-        "start": "node ./src/server.js",
-        "dev": "nodemon ./src/server.js"
+        "start": "node -r dotenv/config ./src/server.js",
+        "dev": "nodemon -r dotenv/config ./src/server.js"
     },
     "author": "Emeric Francisod",
     "license": "MIT",
@@ -22,6 +22,8 @@
         "nodemon": "^2.0.20"
     },
     "dependencies": {
+        "convict": "^6.2.3",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2"
     }
 }
