--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
         "nodemon": "^2.0.20"
     },
     "dependencies": {
+        "@ltd/j-toml": "^1.35.2",
         "convict": "^6.2.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2"
