--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "test": "jest",
-        "start": "node -r dotenv/config ./src/server.js",
+        "start": "node -r dotenv/config ./src/server.js --env production",
         "dev": "nodemon -r dotenv/config ./src/server.js"
     },
     "author": "Emeric Francisod",
