--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "winston": "^3.8.2",
-        "winston-daily-rotate-file": "^4.7.1"
+        "winston-daily-rotate-file": "^4.7.1",
+        "yargs-parser": "^21.1.1"
     }
 }
