--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "jest",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "start": "node -r dotenv/config ./src/server.js --env production",
         "dev": "nodemon -r dotenv/config ./src/server.js"
     },
@@ -13,6 +13,7 @@
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.19.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.19.6",
         "@babel/preset-env": "^7.19.4",
         "@types/jest": "^29.2.1",
         "babel-jest": "^29.2.2",
