--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
         "convict": "^6.2.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "morgan": "^1.10.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1",
         "yargs-parser": "^21.1.1"
