--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
         "start": "node -r dotenv/config ./src/server.js --env production",
-        "dev": "nodemon -r dotenv/config ./src/server.js"
+        "dev": "nodemon -r dotenv/config ./src/server.js",
+        "buildDoc": "redoc-cli build doc/groupomania_openapi.yaml -o doc/groupomania_doc.html --title \"Groupomania API\"",
+        "watchDoc": "redocly preview-docs Groupomania --config=doc/.redocly.yaml --port=8080"
     },
     "author": "Emeric Francisod",
     "license": "MIT",
@@ -16,12 +18,14 @@
         "@babel/core": "^7.19.6",
         "@babel/plugin-transform-modules-commonjs": "^7.19.6",
         "@babel/preset-env": "^7.19.4",
+        "@redocly/cli": "^1.0.0-beta.113",
         "@types/jest": "^29.2.1",
         "babel-jest": "^29.2.2",
         "babel-plugin-transform-import-meta": "^2.2.0",
         "eslint": "^8.26.0",
         "jest": "^29.2.2",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "redoc-cli": "^0.13.20"
     },
     "dependencies": {
         "@ltd/j-toml": "^1.35.2",
