build: update documentation build configuration

--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
         "start": "node -r dotenv/config ./src/server.js --env production",
         "dev": "nodemon -r dotenv/config ./src/server.js",
         "buildDoc": "redoc-cli build doc/groupomania_openapi.yaml -o doc/groupomania_doc.html --title \"Groupomania API\"",
-        "watchDoc": "redocly preview-docs Groupomania --config=doc/.redocly.yaml --port=8080"
+        "watchDoc": "redocly preview-docs Groupomania --config=.redocly.yaml --port=8080"
     },
     "author": "Emeric Francisod",
     "license": "MIT",
