--- a/api/package.json
+++ b/api/package.json
@@ -30,8 +30,10 @@
     "dependencies": {
         "@ltd/j-toml": "^1.35.2",
         "convict": "^6.2.3",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "helmet": "^6.0.0",
         "morgan": "^1.10.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1",
