--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,9 @@
         "express": "^4.18.2",
         "helmet": "^6.0.0",
         "morgan": "^1.10.0",
+        "pg": "^8.8.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.25.6",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1",
         "yargs-parser": "^21.1.1"
