test: fix logging in tests

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "node --experimental-vm-modules -r dotenv/config node_modules/jest/bin/jest.js",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
         "start": "node -r dotenv/config ./src/server.js --env production",
         "dev": "nodemon -r dotenv/config ./src/server.js",
