--- a/api/env.example
+++ b/api/env.example
@@ -1,2 +1,18 @@
 PORT=3000 # Port to run the server on
 NODE_ENV="development" # Environment (development, production, test, ...). This variable will affect the behavior of your API, like logging, file upload or database connection.
+
+# Database configuration
+DB_NAME = "database name"
+DB_USER = "database username"
+DB_PASSWORD = "database password"
+DB_HOST = "DBMS host"
+DB_PORT = 0000 # DBMS port
+DB_SGBD = "DBMS name"
+DB_PROTOCOL = "DBMS protocol"
+DB_SSL = "Does SSL is used"
+
+# Passwords
+SALT_ROUND = 0 # Number of rounds to hash the password using Bcrypt
+
+# JWT
+JWT_KEY = "JWT random key"
