--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
         "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
         "http-errors": "^2.0.0",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
