--- a/api/env.example
+++ b/api/env.example
@@ -16,3 +16,5 @@ SALT_ROUND = 0 # Number of rounds to hash the password using Bcrypt
 
 # JWT
 JWT_KEY = "JWT random key"
+JWT_ALG = "Algorithm to use with JWT"
+JWT_VALID = 0 # Validity duration of the JWT in seconds
