feat: add refresh token

--- a/api/env.example
+++ b/api/env.example
@@ -18,3 +18,6 @@ SALT_ROUND = 0 # Number of rounds to hash the password using Bcrypt
 JWT_KEY = "JWT random key"
 JWT_ALG = "Algorithm to use with JWT"
 JWT_VALID = 0 # Validity duration of the JWT in seconds
+REFRESH_JWT_KEY = "JWT random key"
+REFRESH_JWT_ALG = "Algorithm to use with JWT"
+REFRESH_JWT_VALID = 0 # Validity duration of the JWT in seconds
