--- a/api/package.json
+++ b/api/package.json
@@ -23,8 +23,10 @@
         "redoc-cli": "^0.13.20"
     },
     "dependencies": {
+        "@ladjs/graceful": "^3.2.1",
         "@ltd/j-toml": "^1.35.2",
         "bcrypt": "^5.1.0",
+        "bree": "^9.1.3",
         "convict": "^6.2.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
