feat: prevent user from using admin default email
Filter email during validation.

Add ForbiddenError.

Add possbility to throw custom errors during validation: errorMessage
can contain the HttpError instance to send to the user.
The updated middleware will filter those error and send the first one
that is found.

--- a/api/config/config.toml
+++ b/api/config/config.toml
@@ -18,4 +18,4 @@ allowedHeaders = ["Origin", "X-Requested-With", "Accept", "Content-Type", "Autho
 
 # [adminUser]
 # roleId = 1
-# email = 'admin@groupomania.fr'
+# email = 'admin@groupomania.com'
