--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,8 @@
     "dependencies": {
         "@ladjs/graceful": "^3.2.1",
         "@ltd/j-toml": "^1.35.2",
+        "@ucast/core": "^1.10.1",
+        "@ucast/mongo": "^2.4.2",
         "bcrypt": "^5.1.0",
         "bree": "^9.1.3",
         "convict": "^6.2.3",
