--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,7 @@
         "eslint": "^8.26.0",
         "jest": "^29.2.2",
         "nodemon": "^2.0.20",
-        "redoc-cli": "^0.13.20"
+        "redoc-cli": "^0.13.17"
     },
     "dependencies": {
         "@ladjs/graceful": "^3.2.1",
@@ -37,8 +37,9 @@
         "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
         "http-errors": "^2.0.0",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.25.6",
