--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
     "private": true,
     "type": "module",
     "dependencies": {
+        "@ltd/j-toml": "^1.38.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "convict": "^6.2.4",
+        "express": "^4.18.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
@@ -34,6 +37,9 @@
     },
     "devDependencies": {
         "eslint": "^8.35.0",
-        "prettier": "^2.8.4"
+        "morgan": "^1.10.0",
+        "prettier": "^2.8.4",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
     }
 }
