--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,24 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "convict": "^6.2.4",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
+        "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "frontend-start": "react-scripts start",
+        "dev-start": "npm run build && nodemon -r dotenv/config ./bff/server.js",
+        "start": "npm run build && node -r dotenv/config ./bff/server.js --env production",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "format": "prettier --write --cache --cache-strategy metadata ./ && eslint --fix --cache --ext .js,.cjs ./",
-        "testtest": "echo coucou && echo hello"
+        "format": "prettier --write --cache --cache-strategy metadata ./ && eslint --fix --cache --ext .js,.cjs ./"
     },
     "browserslist": {
         "production": [
@@ -37,9 +42,7 @@
     },
     "devDependencies": {
         "eslint": "^8.35.0",
-        "morgan": "^1.10.0",
-        "prettier": "^2.8.4",
-        "winston": "^3.8.2",
-        "winston-daily-rotate-file": "^4.7.1"
+        "nodemon": "^2.0.21",
+        "prettier": "^2.8.4"
     }
 }
