--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "convict": "^6.2.4",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "helmet": "^6.0.1",
         "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
