--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "convict": "^6.2.4",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
         "morgan": "^1.10.0",
@@ -22,7 +23,8 @@
     },
     "scripts": {
         "frontend-start": "react-scripts start",
-        "dev-start": "npm run build && nodemon -r dotenv/config ./bff/server.js",
+        "backend-start": "nodemon -r dotenv/config ./bff/server.js",
+        "dev-start": "npm run build && npm run backend-start",
         "start": "npm run build && node -r dotenv/config ./bff/server.js --env production",
         "build": "react-scripts build",
         "test": "react-scripts test",
