--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
+        "liquidjs": "^10.6.1",
         "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
