--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.3.4",
         "convict": "^6.2.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
