--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-validator": "^6.15.0",
         "helmet": "^6.0.1",
         "liquidjs": "^10.6.1",
         "morgan": "^1.10.0",
