--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "express-validator": "^6.15.0",
         "helmet": "^6.0.1",
         "liquidjs": "^10.6.1",
+        "memorystore": "^1.6.7",
         "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
