test: test apiRequest service

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,8 @@
         "dev-start": "npm run build && npm run backend-start",
         "start": "npm run build && node -r dotenv/config ./bff/server.js --env production",
         "build": "react-scripts build",
-        "frontend-test": "react-scripts test",
-        "bff-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js -- bff",
+        "frontend-test": "react-scripts test --watchAll=false",
+        "bff-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "eject": "react-scripts eject",
         "format": "prettier --write --cache --cache-strategy metadata ./ && eslint --fix --cache --ext .js,.cjs ./"
     },
