--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "liquidjs": "^10.6.1",
         "memorystore": "^1.6.7",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
