--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
         "@ltd/j-toml": "^1.38.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
         "convict": "^6.2.4",
         "cookie-parser": "^1.4.6",
@@ -21,8 +20,10 @@
         "memorystore": "^1.6.7",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4",
         "winston": "^3.8.2",
@@ -52,6 +53,7 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.0",
         "eslint": "^8.35.0",
         "jest": "^27.5.1",
