--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "dependencies": {
         "@ltd/j-toml": "^1.38.0",
+        "@reduxjs/toolkit": "^1.9.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "axios": "^1.3.4",
@@ -23,8 +24,10 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
+        "redux": "^4.2.1",
         "web-vitals": "^2.1.4",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
