--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,23 +1,6 @@
-PORT=3000 # Port to run the server on
-NODE_ENV="development" # Environment (development, production, test, ...). This variable will affect the behavior of your API, like logging, file upload or database connection.
+PORT=4040 # Port used by the React server during development
+BFF_PORT=8000 # Port used by the BFF server, and to serve the react app in production
+NODE_ENV="development" # Default environment. Can be switched to production in production, or overriden by CLI arguments
 
-# Database configuration
-DB_NAME = "database name"
-DB_USER = "database username"
-DB_PASSWORD = "database password"
-DB_HOST = "DBMS host"
-DB_PORT = 0000 # DBMS port
-DB_SGBD = "DBMS name"
-DB_PROTOCOL = "DBMS protocol"
-DB_SSL = "Does SSL is used"
-
-# Passwords
-SALT_ROUND = 0 # Number of rounds to hash the password using Bcrypt
-
-# JWT
-JWT_KEY = "JWT random key"
-JWT_ALG = "Algorithm to use with JWT"
-JWT_VALID = 0 # Validity duration of the JWT in seconds
-REFRESH_JWT_KEY = "JWT random key"
-REFRESH_JWT_ALG = "Algorithm to use with JWT"
-REFRESH_JWT_VALID = 0 # Validity duration of the JWT in seconds
+# SESSION
+SESSION_SECRET="Random session token" # Secret token for the session. Choose a 32 character random string.
