--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.10",
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.0",
         "eslint": "^8.35.0",
