--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "dependencies": {
         "@ltd/j-toml": "^1.38.0",
         "@reduxjs/toolkit": "^1.9.3",
+        "@tanstack/react-query": "^4.29.19",
+        "@tanstack/react-query-devtools": "^4.29.19",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "axios": "^1.3.4",
@@ -26,8 +28,9 @@
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "redux": "^4.2.1",
+        "validator": "^13.9.0",
         "web-vitals": "^2.1.4",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
@@ -61,7 +64,8 @@
         "@types/jest": "^29.5.0",
         "eslint": "^8.35.0",
         "jest": "^29.5.0",
-        "nodemon": "^2.0.21",
+        "nodemon": "^3.0.1",
         "prettier": "^2.8.4"
-    }
+    },
+    "proxy": "http://localhost:8000"
 }
