--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
         "@types/jest": "^29.5.0",
         "eslint": "^8.35.0",
         "jest": "^29.5.0",
+        "msw": "^1.2.3",
         "nodemon": "^3.0.1",
         "prettier": "^2.8.4"
     },
