feat: add focus trap to the dialogs

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -4,3 +4,6 @@ NODE_ENV="development" # Default environment. Can be switched to production in p
 
 # SESSION
 SESSION_SECRET="Random session token" # Secret token for the session. Choose a 32 character random string.
+
+# REACT, use proxy in development
+DANGEROUSLY_DISABLE_HOST_CHECK = true
