--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
         "helmet": "^6.0.1",
+        "http-proxy-middleware": "^2.0.6",
         "liquidjs": "^10.6.1",
         "memorystore": "^1.6.7",
         "morgan": "^1.10.0",
@@ -30,6 +31,7 @@
         "react-router-dom": "^6.10.0",
         "react-scripts": "^5.0.1",
         "redux": "^4.2.1",
+        "tabbable": "^6.2.0",
         "validator": "^13.9.0",
         "web-vitals": "^2.1.4",
         "winston": "^3.8.2",
