--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-static-gzip": "^2.1.7",
         "express-validator": "^6.15.0",
         "helmet": "^6.0.1",
         "http-proxy-middleware": "^2.0.6",
@@ -43,7 +44,7 @@
         "backend-start": "node -r dotenv/config ./bff/server.js",
         "dev-start": "npm run build && npm run backend-start",
         "start": "npm run build && node -r dotenv/config ./bff/server.js --env production",
-        "build": "react-scripts build",
+        "build": "react-scripts build && compress-cra",
         "frontend-test": "react-scripts test --watchAll=false",
         "bff-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "eject": "react-scripts eject",
@@ -65,6 +66,7 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.10",
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.0",
+        "compress-create-react-app": "^1.4.4",
         "eslint": "^8.35.0",
         "jest": "^29.5.0",
         "msw": "^1.2.3",
