--- a/api/env.example
+++ b/api/env.example
@@ -1,23 +1,23 @@
 PORT=3000 # Port to run the server on
-NODE_ENV="development" # Environment (development, production, test, ...). This variable will affect the behavior of your API, like logging, file upload or database connection.
+NODE_ENV="development" # Environment (development, production, test, ...). This variable will affect the behavior of your API, like logging, file upload or database connection. It can be overriten by the --env CLI argument.
 
 # Database configuration
-DB_NAME = "database name"
-DB_USER = "database username"
-DB_PASSWORD = "database password"
-DB_HOST = "DBMS host"
-DB_PORT = 0000 # DBMS port
-DB_SGBD = "DBMS name"
-DB_PROTOCOL = "DBMS protocol"
-DB_SSL = "Does SSL is used"
+DB_NAME = "groupomania"
+DB_USER = "project_user"
+DB_PASSWORD = "user_password"
+DB_HOST = "localhost"
+DB_PORT = 5432 # DBMS port
+DB_SGBD = "postgres"
+DB_PROTOCOL = "tcp"
+DB_SSL = "false"
 
 # Passwords
-SALT_ROUND = 0 # Number of rounds to hash the password using Bcrypt
+SALT_ROUND = 10 # Number of rounds to hash the password using Bcrypt
 
 # JWT
 JWT_KEY = "JWT random key"
-JWT_ALG = "Algorithm to use with JWT"
-JWT_VALID = 0 # Validity duration of the JWT in seconds
+JWT_ALG = "HS256"
+JWT_VALID = 600 # Validity duration of the JWT in seconds
 REFRESH_JWT_KEY = "JWT random key"
-REFRESH_JWT_ALG = "Algorithm to use with JWT"
-REFRESH_JWT_VALID = 0 # Validity duration of the JWT in seconds
+REFRESH_JWT_ALG = "HS256"
+REFRESH_JWT_VALID = 2764800 # Validity duration of the JWT in seconds
