--- a/api/env.example
+++ b/api/env.example
@@ -1,23 +1,26 @@
 PORT=3000 # Port to run the server on
 NODE_ENV="development" # Environment (development, production, test, ...). This variable will affect the behavior of your API, like logging, file upload or database connection. It can be overriten by the --env CLI argument.
 
-# Database configuration
-DB_NAME = "groupomania"
-DB_USER = "project_user"
-DB_PASSWORD = "user_password"
-DB_HOST = "localhost"
-DB_PORT = 5432 # DBMS port
-DB_SGBD = "postgres"
-DB_PROTOCOL = "tcp"
-DB_SSL = "false"
+# Database configuration. This describes how to access to your database.
+# The defaults corresponds to the default installation of postgresql on a local server, and keeping the default values of the create.sql database file
+DB_NAME = "groupomania" # Name of the databse
+DB_USER = "project_user" # User name to use to connect to the database
+DB_PASSWORD = "user_password" # Password associated to the chosen user
+DB_HOST = "localhost" # Host of the database
+DB_PORT = 5432 # DBMS port # Port used by the database
+DB_SGBD = "postgres" # Name of the database management system
+DB_PROTOCOL = "tcp" # Protocol to use to connect to the database
+DB_SSL = "false" # Weither to use the Secure Sockets Layer security protocol to connect to the database
 
 # Passwords
 SALT_ROUND = 10 # Number of rounds to hash the password using Bcrypt
 
-# JWT
-JWT_KEY = "JWT random key"
-JWT_ALG = "HS256"
+# Json Web Token (JWT), used for authentication, short lived
+JWT_KEY = "JWT random key" # Key the algorithm uses to encode the JWT
+JWT_ALG = "HS256" # Algorithm to use to encode the JWT
 JWT_VALID = 600 # Validity duration of the JWT in seconds
-REFRESH_JWT_KEY = "JWT random key"
-REFRESH_JWT_ALG = "HS256"
+
+# Refresh JWT, used for authentication to refresh the JWT, long lived. MUST be safely stored.
+REFRESH_JWT_KEY = "JWT random key" # Key the algorithm uses to encode the refresh JWT
+REFRESH_JWT_ALG = "HS256" # Algorithm to use to encode the refresh JWT
 REFRESH_JWT_VALID = 2764800 # Validity duration of the JWT in seconds
