doc: update documentation, add nodejs requirement

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,9 +1,9 @@
 PORT=4040 # Port used by the React server during development
 BFF_PORT=8000 # Port used by the BFF server, and to serve the react app in production
-NODE_ENV="development" # Default environment. Can be switched to production in production, or overriden by CLI arguments
+NODE_ENV="development" # Default environment. Can be switched to production in production, or overridden by CLI arguments
 
 # SESSION
-SESSION_SECRET="Random session token" # Secret token for the session. Choose a 32 character random string.
+SESSION_SECRET="Random session token" # Secret token for the session. Choose a 32-character random string.
 
 # REACT, use proxy in development
 DANGEROUSLY_DISABLE_HOST_CHECK = true
